--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.7"
   },
+  "engines": { "node": "12.12.0"},
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.3",
