--- a/package.json
+++ b/package.json
@@ -19,11 +19,18 @@
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.7"
   },
-  "engines": { "node": "12.12.0"},
+  "engines": {
+    "node": "12.12.0"
+  },
   "dependencies": {
     "axios": "^0.18.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.3",
+    "express-session": "^1.17.1",
+    "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
-    "if-env": "^1.0.4"
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1"
   }
 }
