--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.18.0",
+    "google-map-react": "^1.1.7",
     "install": "^0.13.0",
     "npm": "^6.14.5",
     "react": "^16.13.1",
