--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.16.3",
     "express-session": "^1.17.1",
+    "google-map-react": "^1.1.7",
     "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.0.1"
+    "passport-local-mongoose": "^6.0.1",
+    "react-geocode": "^0.2.1"
   }
 }
