--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
-    "react-geocode": "^0.2.1"
+    "react-geocode": "^0.2.1",
+    "socket.io": "^2.3.0"
   }
 }
